ynet.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ynet-deployment
  labels:
    app: ynet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ynet
  template:
    metadata:
      labels:
        app: ynet
    spec:
      containers:
      - name: ynet-web
        image: nadeemjazmawe/ynet:latest
        ports:
        - containerPort: 8081
        name: http-ynet

---
apiVersion: v1
kind: Service
metadata:
  name: ynet-service
  labels: 
    app: ynet-service
spec:
  # type: NodePort
  selector:
    app: ynet
  ports:
  - name: ynet-service
    protocol: TCP
    port: 8081
    targetPort: 8081
