ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nadeem-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
          - path: /bitcoin
            pathType: Prefix
            backend:
              service:
                name: bitcoin-service
                port:
                  number: 5000
    - http:
        paths:
          - path: /ynet
            pathType: Prefix
            backend:
              service:
                name: ynet-service
                port:
                  number: 8081
